--- a/raymarching_kado.html
+++ b/raymarching_kado.html
@@ -423,7 +423,9 @@ function createTextureCube(cubeTextureLoader, rootPath, ext) {
 		rootPath + "py." + ext, rootPath + "ny." + ext,
 		rootPath + "pz." + ext, rootPath + "nz." + ext,
 	];
-	var textureCube = cubeTextureLoader.load(urls);
+	var textureCube = cubeTextureLoader.load(urls, function(texture) {
+		render(true);
+	});
 	textureCube.format = THREE.RGBFormat;
 	textureCube.mapping = THREE.CubeReflectionMapping;
 	//textureCube.generateMipmaps = false;
