Pause kado origin

--- a/raymarching_kado.html
+++ b/raymarching_kado.html
@@ -383,9 +383,9 @@ var config = {
 	camera: 'Orbit',
 	resolution: 512,
 	aspectRatio: 1,
-	pixelRatio: 1,
+	pixelRatio: 2.0,
 	time: 0,
-	pause: false,
+	pause: true,
 	animateWater: false,
 
 	// mandel box
