--- a/raymarching_kado_anime.html
+++ b/raymarching_kado_anime.html
@@ -391,7 +391,7 @@ var config = {
 	animateWater: false,
 
 	// mandel box
-	kadoScale: -3.55,
+	kadoScale: -3.45683723402731,
 	kadoScale2: 1.15,
 };
 
