--- a/pathtracing_sandbox.html
+++ b/pathtracing_sandbox.html
@@ -522,7 +522,7 @@ void intersectAABB( inout Intersection intersection, Ray ray, AABB aabb ){
 
 	if( tmin <= tmax && 0.0 <= tmin && tmin < intersection.distance ) {
 		intersection.hit = true;
-		intersection.position = ray.origin + ray.direction * tmin;
+		intersection.position = ray.origin + ray.direction * (tmin > 0.0 ? tmin : tmax);
 		intersection.distance = tmin;
 		intersection.material = aabb.material;
 
