mod pathtracing_sandbox.html

--- a/pathtracing_sandbox.html
+++ b/pathtracing_sandbox.html
@@ -724,7 +724,7 @@ var config = {
 
 	// Scene Edit
 	preset: "basic",
-	preset: "cornellBox",
+	//preset: "cornellBox",
 	//envmap: "castle",
 	envmap: "pisa",
 	transformMode: function() {
