--- a/index.html
+++ b/index.html
@@ -1,336 +1,368 @@
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-		<title>gam0022.net / webgl-sandbox</title>
-		<meta charset="utf-8">
-		<meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
-		<style>
 
-			@font-face {
-				font-family: 'inconsolata';
-				src: url('files/inconsolata.woff') format('woff');
-				font-weight: normal;
-				font-style: normal;
-			}
+<head>
+	<title>gam0022.net / webgl-sandbox</title>
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
+	<style>
+		@font-face {
+			font-family: 'inconsolata';
+			src: url('files/inconsolata.woff') format('woff');
+			font-weight: normal;
+			font-style: normal;
+		}
 
-			* {
-				box-sizing: border-box;
-			}
+		* {
+			box-sizing: border-box;
+		}
 
-			html {
-				height: 100%;
-			}
+		html {
+			height: 100%;
+		}
 
-			body {
-				background-color: #ffffff;
-				margin: 0px;
-				height: 100%;
-				color: #555;
-				font-family: 'inconsolata';
-				font-size: 15px;
-				line-height: 18px;
-				overflow: hidden;
-			}
+		body {
+			background-color: #ffffff;
+			margin: 0px;
+			height: 100%;
+			color: #555;
+			font-family: 'inconsolata';
+			font-size: 15px;
+			line-height: 18px;
+			overflow: hidden;
+		}
 
+		h1 {
+			margin-top: 30px;
+			margin-bottom: 40px;
+			margin-left: 20px;
+			font-size: 18px;
+			font-weight: normal;
+		}
+
+		h2 {
+			font-size: 20px;
+			font-weight: normal;
+		}
+
+		a {
+			color: #2194CE;
+			text-decoration: none;
+		}
+
+		#panel {
+			position: fixed;
+			left: 0px;
+			width: 310px;
+			height: 100%;
+			overflow: auto;
+			background: #fafafa;
+		}
+
+		#panel #content {
+			padding: 0px 20px 20px 20px;
+		}
+
+		#panel #content .link {
+			color: #2194CE;
+			text-decoration: none;
+			cursor: pointer;
+			display: block;
+		}
+
+		#panel #content .selected {
+			color: #ff0000;
+		}
+
+		#panel #content .link:hover {
+			text-decoration: underline;
+		}
+
+		#viewer {
+			position: absolute;
+			border: 0px;
+			left: 310px;
+			width: calc(100% - 310px);
+			height: 100%;
+			overflow: auto;
+		}
+
+		#button {
+			position: fixed;
+			bottom: 20px;
+			right: 20px;
+			padding: 8px;
+			color: #fff;
+			background-color: #555;
+			opacity: 0.7;
+		}
+
+		#button:hover {
+			cursor: pointer;
+			opacity: 1;
+		}
+
+		.filterBlock {
+			margin: 20px;
+			position: relative;
+		}
+
+		.filterBlock p {
+			margin: 0;
+		}
+
+		#filterInput {
+			width: 100%;
+			padding: 5px;
+			font-family: inherit;
+			font-size: 15px;
+			outline: none;
+			border: 1px solid #dedede;
+		}
+
+		#filterInput:focus {
+			border: 1px solid #2194CE;
+		}
+
+		#clearFilterButton {
+			position: absolute;
+			right: 6px;
+			top: 50%;
+			margin-top: -8px;
+			width: 16px;
+			height: 16px;
+			font-size: 14px;
+			color: grey;
+			text-align: center;
+			line-height: 0;
+			padding-top: 7px;
+			opacity: .5;
+		}
+
+		#clearFilterButton:hover {
+			opacity: 1;
+		}
+
+		.filtered {
+			display: none !important;
+		}
+
+		#panel li b {
+			font-weight: bold;
+		}
+
+		/* mobile */
+
+		#expandButton {
+			display: none;
+			position: absolute;
+			right: 20px;
+			top: 12px;
+			width: 32px;
+			height: 32px;
+		}
+
+		#expandButton span {
+			height: 2px;
+			background-color: #2194CE;
+			width: 16px;
+			position: absolute;
+			left: 8px;
+			top: 10px;
+		}
+
+		#expandButton span:nth-child(1) {
+			top: 16px;
+		}
+
+		#expandButton span:nth-child(2) {
+			top: 22px;
+		}
+
+		@media all and (max-width: 640px) {
 			h1 {
-				margin-top: 30px;
-				margin-bottom: 40px;
-				margin-left: 20px;
-				font-size: 18px;
-				font-weight: normal;
-			}
-
-			h2 {
-				font-size: 20px;
-				font-weight: normal;
-			}
-
-			a {
-				color: #2194CE;
-				text-decoration: none;
+				margin-top: 20px;
+				margin-bottom: 20px;
 			}
 
 			#panel {
-				position: fixed;
-				left: 0px;
-				width: 310px;
-				height: 100%;
+				position: absolute;
+				left: 0;
+				top: 0;
+				height: 480px;
+				width: 100%;
+				right: 0;
+				z-index: 100;
+				overflow: hidden;
+				border-bottom: 1px solid #dedede;
+			}
+
+			#content {
+				position: absolute;
+				left: 0;
+				top: 90px;
+				right: 0;
+				bottom: 0;
+				font-size: 17px;
+				line-height: 22px;
 				overflow: auto;
-				background: #fafafa;
-			}
-
-			#panel #content {
-				padding: 0px 20px 20px 20px;
-			}
-
-			#panel #content .link {
-				color: #2194CE;
-				text-decoration: none;
-				cursor: pointer;
-				display: block;
-			}
-
-			#panel #content .selected {
-				color: #ff0000;
-			}
-
-			#panel #content .link:hover {
-				text-decoration: underline;
 			}
 
 			#viewer {
 				position: absolute;
-				border: 0px;
-				left: 310px;
-				width: calc(100% - 310px);
-				height: 100%;
-				overflow: auto;
-			}
-
-			#button {
-				position: fixed;
-				bottom: 20px;
-				right: 20px;
-				padding: 8px;
-				color: #fff;
-				background-color: #555;
-				opacity: 0.7;
-			}
-
-			#button:hover {
-				cursor: pointer;
-				opacity: 1;
-			}
-
-			.filterBlock{
-				margin: 20px;
-				position: relative;
-			}
-
-			.filterBlock p {
-				margin: 0;
-			}
-
-			#filterInput {
+				left: 0;
+				top: 56px;
 				width: 100%;
-				padding: 5px;
-				font-family: inherit;
-				font-size: 15px;
-				outline: none;
-				border: 1px solid #dedede;
+				height: calc(100% - 56px);
 			}
-
-			#filterInput:focus{
-				border: 1px solid #2194CE;
-			}
-
-			#clearFilterButton {
-				position: absolute;
-				right: 6px;
-				top: 50%;
-				margin-top: -8px;
-				width: 16px;
-				height: 16px;
-				font-size: 14px;
-				color: grey;
-				text-align: center;
-				line-height: 0;
-				padding-top: 7px;
-				opacity: .5;
-			}
-
-			#clearFilterButton:hover {
-				opacity: 1;
-			}
-
-			.filtered {
-				display: none !important;
-			}
-
-			#panel li b {
-				font-weight: bold;
-			}
-
-			/* mobile */
 
 			#expandButton {
-				display: none;
-				position: absolute;
-				right: 20px;
-				top: 12px;
-				width: 32px;
-				height: 32px;
+				display: block;
 			}
 
-			#expandButton span {
-				height: 2px;
-				background-color: #2194CE;
-				width: 16px;
-				position: absolute;
-				left: 8px;
-				top: 10px;
+			#panel.collapsed {
+				height: 56px;
 			}
+		}
+	</style>
+</head>
 
-			#expandButton span:nth-child(1) {
-				top: 16px;
-			}
+<body>
 
-			#expandButton span:nth-child(2) {
-				top: 22px;
-			}
-
-			@media all and ( max-width: 640px ) {
-				h1{
-					margin-top: 20px;
-					margin-bottom: 20px;
-				}
-				#panel{
-					position: absolute;
-					left: 0;
-					top: 0;
-					height: 480px;
-					width: 100%;
-					right: 0;
-					z-index: 100;
-					overflow: hidden;
-					border-bottom: 1px solid #dedede;
-				}
-				#content{
-					position: absolute;
-					left: 0;
-					top: 90px;
-					right: 0;
-					bottom: 0;
-					font-size: 17px;
-					line-height: 22px;
-					overflow: auto;
-				}
-				#viewer{
-					position: absolute;
-					left: 0;
-					top: 56px;
-					width: 100%;
-					height: calc(100% - 56px);
-				}
-				#expandButton{
-					display: block;
-				}
-				#panel.collapsed{
-					height: 56px;
-				}
-			}
-
-		</style>
-	</head>
-	<body>
-
-		<div id="panel" class="collapsed">
-			<h1><a href="http://gam0022.net">gam0022.net</a> / webgl-sandbox</h1>
-			<a id="expandButton" href="#">
-				<span></span>
-				<span></span>
-				<span></span>
-			</a>
-			<div class="filterBlock" >
-				<input type="text" id="filterInput" placeholder="Type to filter"/>
-				<a href="#" id="clearFilterButton" >x</a>
-			</div>
-			<div id="content"></div>
+	<div id="panel" class="collapsed">
+		<h1><a href="http://gam0022.net">gam0022.net</a> / webgl-sandbox</h1>
+		<a id="expandButton" href="#">
+			<span></span>
+			<span></span>
+			<span></span>
+		</a>
+		<div class="filterBlock">
+			<input type="text" id="filterInput" placeholder="Type to filter" />
+			<a href="#" id="clearFilterButton">x</a>
 		</div>
-		<iframe id="viewer" allowfullscreen onmousewheel=""></iframe>
+		<div id="content"></div>
+	</div>
+	<iframe id="viewer" allowfullscreen onmousewheel=""></iframe>
 
-		<script src="files.js"></script>
-		<script>
+	<script>
+		var files = {
+			'64k-intro': [
+				'64k-intro_resimulated',
+			],
+			'raymarching': [
+				'raymarching_kado',
+				'raymarching_kado_anime',
+				'raymarching_tdf2017',
+				'raymarching_hybrid',
+				'raymarching_hybrid_live',
+				'raymarching_shadow',
+				'raymarching_carbon',
+				'raymarching_reflect',
+				'raymarching_steel-frame',
+			],
+			'raytracing': [
+				'raytracing_gem',
+			],
+			'pathtracing': [
+				'pathtracing_sandbox',
+			],
+			'emscripten': [
+				'emscripten_tsukihi',
+			],
+			'misc': [
+				'misc_superellipsoid',
+			],
+		};
 
-		var panel = document.getElementById( 'panel' );
-		var content = document.getElementById( 'content' );
-		var viewer = document.getElementById( 'viewer' );
+		var panel = document.getElementById('panel');
+		var content = document.getElementById('content');
+		var viewer = document.getElementById('viewer');
 
-		var filterInput = document.getElementById( 'filterInput' );
-		var clearFilterButton = document.getElementById( 'clearFilterButton' );
+		var filterInput = document.getElementById('filterInput');
+		var clearFilterButton = document.getElementById('clearFilterButton');
 
-		var expandButton = document.getElementById( 'expandButton' );
-		expandButton.addEventListener( 'click', function ( event ) {
-			panel.classList.toggle( 'collapsed' );
+		var expandButton = document.getElementById('expandButton');
+		expandButton.addEventListener('click', function (event) {
+			panel.classList.toggle('collapsed');
 			event.preventDefault();
-		} );
+		});
 
 		// iOS8 workaround
 
-		if ( /(iPad|iPhone|iPod)/g.test( navigator.userAgent ) ) {
+		if (/(iPad|iPhone|iPod)/g.test(navigator.userAgent)) {
 
-			viewer.addEventListener( 'load', function ( event ) {
+			viewer.addEventListener('load', function (event) {
 
 				viewer.contentWindow.innerWidth -= 10;
 				viewer.contentWindow.innerHeight -= 2;
 
-			} );
+			});
 
 		}
 
-		var container = document.createElement( 'div' );
-		content.appendChild( container );
+		var container = document.createElement('div');
+		content.appendChild(container);
 
-		var button = document.createElement( 'div' );
+		var button = document.createElement('div');
 		button.id = 'button';
 		button.textContent = 'View source';
-		button.addEventListener( 'click', function ( event ) {
+		button.addEventListener('click', function (event) {
 
-			window.open( 'https://github.com/gam0022/webgl-sandbox/blob/master/' + selected + '.html' );
+			window.open('https://github.com/gam0022/webgl-sandbox/blob/master/' + selected + '.html');
 
-		}, false );
+		}, false);
 		button.style.display = 'none';
-		document.body.appendChild( button );
+		document.body.appendChild(button);
 
 		var links = {};
 		var selected = null;
 
-		for ( var key in files ) {
+		for (var key in files) {
 
-			var section = files[ key ];
+			var section = files[key];
 
-			var header = document.createElement( 'h2' );
+			var header = document.createElement('h2');
 			header.textContent = key;
-			header.setAttribute( 'data-category', key );
-			container.appendChild( header );
+			header.setAttribute('data-category', key);
+			container.appendChild(header);
 
-			for ( var i = 0; i < section.length; i ++ ) {
+			for (var i = 0; i < section.length; i++) {
 
-				( function ( file ) {
+				(function (file) {
 
-					var name = getName( file );
+					var name = getName(file);
 
-					var link = document.createElement( 'a' );
+					var link = document.createElement('a');
 					link.className = 'link';
 					link.textContent = name;
 					link.href = "#" + file;
-					link.addEventListener( 'click', function ( event ) {
+					link.addEventListener('click', function (event) {
 
-						if ( event.button === 0 ) {
+						if (event.button === 0) {
 
 							event.preventDefault();
 
-							panel.classList.toggle( 'collapsed' );
-							load( file );
+							panel.classList.toggle('collapsed');
+							load(file);
 
 						}
 
-					} );
-					container.appendChild( link );
+					});
+					container.appendChild(link);
 
-					links[ file ] = link;
+					links[file] = link;
 
-				} )( section[ i ] );
+				})(section[i]);
 
 			}
 
 		}
 
-		var load = function ( file ) {
+		var load = function (file) {
 
-			if ( selected !== null ) links[ selected ].className = 'link';
+			if (selected !== null) links[selected].className = 'link';
 
-			links[ file ].className = 'link selected';
+			links[file].className = 'link selected';
 
 			window.location.hash = file;
 			viewer.src = file + '.html';
@@ -342,39 +374,39 @@
 
 		};
 
-		if ( window.location.hash !== '' ) {
+		if (window.location.hash !== '') {
 
-			load( window.location.hash.substring( 1 ) );
+			load(window.location.hash.substring(1));
 
 		}
 
 		// filter
 
-		filterInput.addEventListener( 'input', function( e ) {
+		filterInput.addEventListener('input', function (e) {
 
 			updateFilter();
 
-		} );
+		});
 
-		clearFilterButton.addEventListener( 'click', function( e ) {
+		clearFilterButton.addEventListener('click', function (e) {
 
 			filterInput.value = '';
 			updateFilter();
 			e.preventDefault();
 
-		} );
+		});
 
 		function updateFilter() {
 
-			var exp = new RegExp( filterInput.value, 'gi' );
+			var exp = new RegExp(filterInput.value, 'gi');
 
-			for ( var key in files ) {
+			for (var key in files) {
 
-				var section = files[ key ];
+				var section = files[key];
 
-				for ( var i = 0; i < section.length; i ++ ) {
+				for (var i = 0; i < section.length; i++) {
 
-					filterExample( section[ i ], exp );
+					filterExample(section[i], exp);
 
 				}
 
@@ -384,52 +416,52 @@
 
 		}
 
-		function filterExample( file, exp ){
+		function filterExample(file, exp) {
 
-			var link = links[ file ];
-			var name = getName( file );
-			var res = file.match( exp );
+			var link = links[file];
+			var name = getName(file);
+			var res = file.match(exp);
 			var text;
 
-			if ( res && res.length > 0 ) {
+			if (res && res.length > 0) {
 
-				link.classList.remove( 'filtered' );
+				link.classList.remove('filtered');
 
-				for( var i = 0; i < res.length; i++ ) {
-					text = name.replace( res[ i ], '<b>' + res[ i ] + '</b>' );
+				for (var i = 0; i < res.length; i++) {
+					text = name.replace(res[i], '<b>' + res[i] + '</b>');
 				}
 
 				link.innerHTML = text;
 
 			} else {
 
-				link.classList.add( 'filtered' );
+				link.classList.add('filtered');
 				link.innerHTML = name;
 
 			}
 		}
 
-		function getName( file ) {
+		function getName(file) {
 
-			var name = file.split( '_' );
+			var name = file.split('_');
 			name.shift();
-			return name.join( ' / ' );
+			return name.join(' / ');
 
 		}
 
 		function layoutList() {
 
-			for ( var key in files ) {
+			for (var key in files) {
 
 				var collapsed = true;
 
-				var section = files[ key ];
+				var section = files[key];
 
-				for ( var i = 0; i < section.length; i ++ ) {
+				for (var i = 0; i < section.length; i++) {
 
-					var file = section[ i ];
+					var file = section[i];
 
-					if( !links[ file ].classList.contains( 'filtered' ) ){
+					if (!links[file].classList.contains('filtered')) {
 
 						collapsed = false;
 						break;
@@ -438,15 +470,15 @@
 
 				}
 
-				var element = document.querySelector( 'h2[data-category="' + key + '"]' );
+				var element = document.querySelector('h2[data-category="' + key + '"]');
 
-				if( collapsed ){
+				if (collapsed) {
 
-					element.classList.add( 'filtered' );
+					element.classList.add('filtered');
 
 				} else {
 
-					element.classList.remove( 'filtered' );
+					element.classList.remove('filtered');
 
 				}
 
@@ -454,7 +486,8 @@
 
 		}
 
-		</script>
+	</script>
 
-	</body>
+</body>
+
 </html>
