--- a/raymarching_steel-frame.html
+++ b/raymarching_steel-frame.html
@@ -23,6 +23,9 @@ http://opensource.org/licenses/mit-license.php
     body {
       margin: 0;
       padding: 0;
+      width: 100%;
+      height: 100%;
+      overflow: hidden;
     }
   </style>
 </head>
