--- a/raymarching_steel-frame.html
+++ b/raymarching_steel-frame.html
@@ -27,6 +27,16 @@ http://opensource.org/licenses/mit-license.php
       height: 100%;
       overflow: hidden;
     }
+
+    canvas {
+      display: block;
+      position: absolute;
+      top: 0;
+      left: 0;
+      right: 0;
+      bottom: 0;
+      margin: auto;
+    }
   </style>
 </head>
 
