--- a/index.html
+++ b/index.html
@@ -246,9 +246,6 @@
 
 	<script>
 		var files = {
-			'64k-intro': [
-				'64k-intro_resimulated',
-			],
 			'raymarching': [
 				'raymarching_kado',
 				'raymarching_kado_anime',
@@ -268,6 +265,12 @@
 			],
 			'emscripten': [
 				'emscripten_tsukihi',
+			],
+			'64k-intro': [
+				'64k-intro_resimulated',
+			],
+			'demoscene': [
+				'demoscne_guardian',
 			],
 			'misc': [
 				'misc_superellipsoid',
