--- a/index.html
+++ b/index.html
@@ -270,7 +270,8 @@
 				'64k-intro_resimulated',
 			],
 			'demoscene': [
-				'demoscne_guardian',
+				'demoscene_guardian',
+				'demoscene_egof',
 			],
 			'misc': [
 				'misc_superellipsoid',
